--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,8 +10,8 @@
 
 <body>
   <header>
-    <h1>Dry Oar Site Plan</h1>
-    <h2>Tlaloc Juarez </h2>
+    <h1>Dry Oar</h1>
+    <h2>Big Foot</h2>
     <h2>WDD 130-05</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
