--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title> ALL ABOUT ME</title>
+    <link  rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
-    <h1> ABOUT ME</h1>
+    <h1>ABOUT ME</h1>
     <img alt = "Image of me" src="/aboutme/images/snow_boy.jpg"/>
     <h2>Tlaloc</h2>
     <h2>TJ</h2>
