--- a/wwr/index.html
+++ b/wwr/index.html
@@ -50,7 +50,7 @@
                 <h2>Rapids</h2>
             </section>
             <div id="background"></div>
-            <img class="mountiains" src="images/mountain.jpg" alt="Misty Mountains">
+            <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
             <section class="msg">
                 <h2>More Than Just The Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
@@ -58,9 +58,9 @@
             </section>
         </main>
         <footer>
-            <p>Dry Oar &copy; 20XX - Your First and Last name here</p>
-            <p><a href="site-plan-rafting.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <h3>Dry Oar &copy; 20XX - Your First and Last name here</h3>
+            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="socail">
                 <a href="https://facebook.com" target="_blank" >
                     <img src="images/facebook.png" alt="fb icon">
