week 7 site-plan 2.0

--- a/rollwithme/site-plan.html
+++ b/rollwithme/site-plan.html
@@ -28,7 +28,7 @@
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>My audience is all people ages 6+ who want to learn more about the art of jiu jitsu and would like to increase their physical well being.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
