week 8 personal site

--- a/rollwithme/site-plan.html
+++ b/rollwithme/site-plan.html
@@ -128,29 +128,54 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        People will visit the site because they will want to learn about what physical and mental health benefits come with practicing Jiu Jitsu.
+
+        They will also visit because of a link to my Instagram.
+
+        FAQ
+        What kind of health benefits should I expect from jiu jitsu?
+
+        Should I expect to lose weight because of training?
+
+        How can I avoid injury?
+
+        INFO I WANT   
+          1. Name 
+          2. Cell phone 
+          3. Email
+
+        PERKS OF MY SITE
+        If you complete a survey you can get 25% off of your first months membership fee. 
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
+        <img src="images/home_page_pic.jpg" alt="image for homepage">
         <img src="#" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Health Benefits of Jiu Jitsu]</h3>
+      <p>Cardio</p>
+      <p>Strength</p>
+      <p>Mobility</p>
       <p>
-        [Written copy for the Page 2 here]
+        Health Benefits of Jiu Jitsu
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/photo-1.webp" alt="image for page">
+        <img src="images/strenght.jpg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[Sense of Community]</h3>
+      <p>Training with likeminded people</p>
+      <p>Kids gain a friend group</p>
+      <p>Competition</p>
+      <p>Opportunity to Teach</p>
       <p>
-        [Written copy for the Page 3 here]
+        Sense of Community
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/Community.png" alt="image for page3">
+        <img src="images/competition_pic.webp" alt="image for page3">
 
       </ul>
       <hr>
