week 8 site plan

--- a/rollwithme/site-plan.html
+++ b/rollwithme/site-plan.html
@@ -154,9 +154,11 @@
 
       </ul>
       <h3>[Health Benefits of Jiu Jitsu]</h3>
-      <p>Cardio</p>
-      <p>Strength</p>
-      <p>Mobility</p>
+      <p>Cardio - Grappling burns a lot of calories because of its aerobic and anerobic demands. Most gyms implement a type of sparring (known as rolling) where members of a gym can practice techniques with students of all levels and sizes. Rounds go for 5 minutes and can be as much as 30 minutes of the class.
+      </p>
+      <p>Strength -  In addition to good heart health, increase in strength can also occur. Jiu Jitsu incorporates many joint locks and submissions that require control of one's body and exerting strength to control another.
+      </p>
+      <p>Mobility - As we age, our bodies naturally become less mobile. Regular practice of jiu jitsu puts your body in many different positions which helps maintain flexibility. The consistency of training demands movements that keeps your body loose.</p>
       <p>
         Health Benefits of Jiu Jitsu
       </p>
@@ -166,10 +168,13 @@
 
       </ul>
       <h3>[Sense of Community]</h3>
-      <p>Training with likeminded people</p>
-      <p>Kids gain a friend group</p>
-      <p>Competition</p>
-      <p>Opportunity to Teach</p>
+      <p>Training with likeminded people - You have to be at least a little brave to walk into a jiu jitsu gym. The people you will be surrounded by are looking to better themselves as well. Shared values from the group can lead to associations and friendships with people who like you were brave enough to start and mentally strong enough to continue.
+      </p>
+      <p>Kids gain a friend group -Jiu Jitsu gives children an opportunity to become comfortable in their bodies because of the nature of grappling. Being able to experience rough and tumble activities helps children to discover the limits of their bodies. Practicing with a peers in their age range can also foster strong friendships built on mutual respect. </p>
+      <p>Competition - The world of Jiu Jitsu competition is large and growing. Being able to compete through the learning process allows for long term growth and refinement of ones skills. Certain competitions can even take you to foreign countries. The large base of competitors makes it so you can meet new people in the art your entire time.
+      </p>
+      <p>Opportunity to Teach - It is common practice in jiu jitsu to help those you work with. Open feedback is normally available if asked for. The culture of rolling with all skill levels is one which allows for ideas to be exchanged freely. Most people in a gym recognize the goal is to improve and this environment is one which that goal is alive and well.
+      </p>
       <p>
         Sense of Community
       </p>
