--- a/rollwithme/site-plan.html
+++ b/rollwithme/site-plan.html
@@ -194,19 +194,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/homepage_wireframe.jpg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>[Benefits]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/secondpage_wireframe.jpg" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>[Community]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/thirdpage_wireframe.jpg" alt="page 3 wireframe">
     </main>
   </body>
 
