--- a/rollwithme/index.html
+++ b/rollwithme/index.html
@@ -13,8 +13,8 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Benefits</a>
-            <a href="#">Communtiy</a>
+            <a href="benefits_page.html">Benefits</a>
+            <a href="community_page.html">Communtiy</a>
         </nav>
     </header>
     <div id="hero">
