--- a/rollwithme/index.html
+++ b/rollwithme/index.html
@@ -5,36 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
-        <a id ="logo_link" href="index.html">
-            <img class="logo" src="images/personal_site_logo.png" alt="roll-with-me-logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="benefits_page.html">Benefits</a>
-            <a href="community_page.html">Communtiy</a>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-image" src="images/home_page_pic.jpg" alt="Men at competition">
+    <div id="contnet">
+        <header>
+            <a id ="logo_link" href="index.html">
+                <img class="logo" src="images/personal_site_logo.png" alt="roll-with-me-logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="benefits_page.html">Benefits</a>
+                <a href="community_page.html">Communtiy</a>
+            </nav>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-image" src="images/home_page_pic.jpg" alt="Men at competition">
+            </div>
         </div>
+        <footer>
+            <h3>Roll With Me &copy; 20XX - Tlaloc Juarez</h3>
+            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <div class="socail">
+                <a href="https://facebook.com" target="_blank" >
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank" >
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+        </footer>
     </div>
-    <footer>
-        <h3>Roll With Me &copy; 20XX - Tlaloc Juarez</h3>
-        <h3><a href="site-plan.html">Site Plan</a></h3>
-        <div class="socail">
-            <a href="https://facebook.com" target="_blank" >
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com" target="_blank" >
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-    </footer>
 </body>
 </html>
