--- a/rollwithme/site-plan.html
+++ b/rollwithme/site-plan.html
@@ -54,7 +54,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#606C38]</td><td class="secondary">[#445128]</td><td class="accent1">[#FEFAE0]</td><td class="accent2">[#DDA15E]</td></tr>
+        <tr><td class="primary">[#ABD2FA]</td><td class="secondary">[#DADADA]</td><td class="accent1">[#FEFAE0]</td><td class="accent2">[#DDA15E]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
