Personal Site pg 2

--- a/rollwithme/benefits_page.html
+++ b/rollwithme/benefits_page.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <a id ="logo_link" href="index.html">
             <img class="logo" src="images/personal_site_logo.png" alt="roll-with-me-logo">
         </a>
-       <h1>Benefits Of Jiu Jitsu</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="benefits_page.html">Benefits</a>
+            <a href="community_page.html">Communtiy</a>
+        </nav>
+        <!-- <a id ="logo_link" href="index.html">
+            <img class="logo" src="images/personal_site_logo.png" alt="roll-with-me-logo">
+        </a>
+       <h1>Benefits Of Jiu Jitsu</h1> -->
     </header>
     <main class="home-grid">
         <section class="cardio-card">
