--- a/rollwithme/community_page.html
+++ b/rollwithme/community_page.html
@@ -5,27 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <a id ="logo_link" href="index.html">
             <img class="logo" src="images/personal_site_logo.png" alt="roll-with-me-logo">
         </a>
-        <h1>Community</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="benefits_page.html">Benefits</a>
+            <a href="community_page.html">Communtiy</a>
+        </nav>
+        <!-- <a id ="logo_link" href="index.html">
+            <img class="logo" src="images/personal_site_logo.png" alt="roll-with-me-logo">
+        </a>
+        <h1>Community</h1> -->
     </header>
     <main>
-        <h1>Competition
-            <img class="comp-background" src="images/competition_pic.webp">
-        </h1>
-        
-        <h1>Friend Group
-            <img class="friend-background" src="images/Community.png">
-        </h1>
-
-        <h1>Teaching Opportunity
-            <img class="teach-background" src="images/strenght.jpg">
-        </h1>
-    </main>
+        <img class="comp-background" src="images/competition_pic.webp">
+        <img class="friend-background" src="images/Community.png">
+        <img class="teach-background" src="images/strenght.jpg">
+        <!-- <p>
+            sdfsdfsdf
+        </p> -->
+        <div id="text-box1">
+            <h1>Competition</h1>
+            <p>The world of Jiu Jitsu competition is large and growing. Being able to compete through the learning process allows for long term growth and refinement of ones skills. Certain competitions can even take you to foreign countries. The large base of competitors makes it so you can meet new people in the art your entire time.
+            </p>
+        </div>
+        <div id="text-box2">
+            <h1>Friend Group</h1>
+            <p>Jiu Jitsu gives children an opportunity to become comfortable in their bodies because of the nature of grappling. Being able to experience rough and tumble activities helps children to discover the limits of their bodies. Practicing with a peers in their age range can also foster strong friendships built on mutual respect.
+            </p>
+        </div>
+        <div id="text-box3">
+            <h1>Teaching Opportunity</h1>
+            <p>It is common practice in jiu jitsu to help those you work with. Open feedback is normally available if asked for. The culture of rolling with all skill levels is one which allows for ideas to be exchanged freely. Most people in a gym recognize the goal is to improve and this environment is one which that goal is alive and well.
+            </p>
+        </div>
+        </main>
     <footer>
         <h3>Roll With Me &copy; 20XX - Tlaloc Juarez</h3>
         <h3><a href="site-plan.html">Site Plan</a></h3>
