--- a/rollwithme/community_page.html
+++ b/rollwithme/community_page.html
@@ -23,9 +23,9 @@
         <h1>Community</h1> -->
     </header>
     <main>
-        <img class="comp-background" src="images/competition_pic.webp">
-        <img class="friend-background" src="images/Community.png">
-        <img class="teach-background" src="images/strenght.jpg">
+        <img class="comp-background" src="images/competition_pic.webp" alt="who cares">
+        <img class="friend-background" src="images/Community.png" alt="who cares">
+        <img class="teach-background" src="images/strenght.jpg" alt="who cares">
         <!-- <p>
             sdfsdfsdf
         </p> -->
@@ -58,6 +58,7 @@
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
+        </div>
     </footer>
 </body>
 </html>
