--- a/rollwithme/benefits_page.html
+++ b/rollwithme/benefits_page.html
@@ -24,16 +24,22 @@
     </header>
     <main class="home-grid">
         <section class="cardio-card">
-            <img class="card-img" src="images/cardio_icon.png" alt="heart-icon">
             <h2>Cardio</h2>
+            <p>Grappling burns a lot of calories because of its aerobic and anerobic demands. Most gyms implement a type of sparring (known as rolling) where members of a gym can practice techniques with students of all levels and sizes. Rounds go for 5 minutes and can be as much as 30 minutes of the class.
+            </p>
         </section>
+        <img class="card-img1" src="images/cardio_icon.png" alt="heart-icon">
         <section class="strength-card">
-            <img class="card-img" src="images/strength_icon2.png" alt="strength-icon">
             <h2>Strength</h2>
+            <p> In addition to good heart health, increase in strength can also occur. Jiu Jitsu incorporates many joint locks and submissions that require control of one's body and exerting strength to control another.
+            </p>
         </section>
+        <img class="card-img2" src="images/strength_icon2.png" alt="strength-icon">
         <section class="mobility-card">
-            <img class="card-img" src="images/mobility_icon.png" alt="mobility-icon">
             <h2>Mobility</h2>
+            <p>As we age, our bodies naturally become less mobile. Regular practice of jiu jitsu puts your body in many different positions which helps maintain flexibility. The consistency of training demands movements that keeps your body loose.</p>
+        </section>
+        <img class="card-img3" src="images/mobility_icon.png" alt="mobility-icon">
     </main>
     <footer>
         <h3>Roll With Me &copy; 20XX - Tlaloc Juarez</h3>
